--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,10 @@
 
 add_library(kahan OBJECT kahan.cu)
 
-add_executable(test test.cc $<TARGET_OBJECTS:kahan>)
+add_executable(test_verify test_verify.cc $<TARGET_OBJECTS:kahan>)
 
-target_link_libraries(test PRIVATE llmmm)
+target_link_libraries(test_verify PRIVATE llmmm)
+
+add_executable(test_tune test_tune.cc)
+
+target_link_libraries(test_tune PRIVATE llmmm)
