--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,8 @@ add_executable(test_cublas test_cublas.cc)
 
 find_package(CUDA REQUIRED)
 target_link_libraries(test_cublas cublas ${CUDA_LIBRARIES})
+
+add_executable(test_cublas_2 test_cublas_2.cc)
+
+find_package(CUDA REQUIRED)
+target_link_libraries(test_cublas_2 cublas ${CUDA_LIBRARIES})
